kubernetes/apps/kube-system/cilium/app/hubble-httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
spec:
  hostnames:
    - hubble.rphilipsen.nl
  parentRefs:
    - name: agentgateway-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
